# documentation

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  mkdocs.yml  pyproject.toml  wrangler.toml
docs/: index.md
docs/contributing/: code-style.md  development-setup.md  index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/projects/: index.md
docs/projects/hedit/: api-reference.md  cli-reference.md  index.md  python-api.md  telemetry.md
docs/projects/hedit/presentations/: annotate-those-steps.md  index.md
docs/projects/hedit/presentations/slides/annotate-those-steps/: annotate-those-steps.json  annotate-those-steps.md
docs/projects/hedit/presentations/slides/annotate-those-steps/assets/figures/: experiment-scene-labels.json
docs/projects/image-annotation/: api-reference.md  index.md
docs/standards/: annotation-format.md  bids-integration.md  hed-guidelines.md  index.md
docs/stylesheets/: extra.css
overrides/: .gitkeep
scripts/: gen_ref_pages.py  sync_presentations.sh
stylesheets/: extra.css
