[project]
name = "agi-documentation"
version = "0.1.0"
description = "Documentation for the Annotation Garden Initiative"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Annotation Garden Initiative", email = "info@annotation.garden"}
]

dependencies = [
    # MkDocs core
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",

    # Auto-documentation from Python code
    "mkdocstrings>=0.26.0",
    "mkdocstrings-python>=1.12.0",

    # Additional plugins
    "mkdocs-gen-files>=0.5.0",      # Generate files during build
    "mkdocs-literate-nav>=0.6.0",   # Literate navigation
    "mkdocs-section-index>=0.3.0",  # Section index pages
    "mkdocs-autorefs>=1.0.0",       # Cross-references
    "mkdocs-minify-plugin>=0.8.0",  # Minify output

    # CLI documentation
    "typer-cli>=0.15.0",            # Generate CLI docs from Typer

    # JSON Schema documentation
    "json-schema-for-humans>=1.0.0", # Generate docs from JSON schemas

    # Development
    "mike>=2.1.0",                   # Versioned docs
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a documentation-only project, no Python packages
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
